tests/errors/duplicate_argument.ki
var f = Function(a):
    return a
f(1, a = 2)
